--- a/css/style.css
+++ b/css/style.css
@@ -60,10 +60,10 @@
 
 /* color */
 :root {
-	--primary-color: #64c1ec;  /* azzurro */
+	--primary-color: #f4f4f4;  /* azzurro */
 	--secondary-color: #222d4f; /* blu scuro */
-	--text-color-white: #f4f4f4; /* Colore di sfondo */
-	--text-color-black: var(--text-color-black); /* Colore del testo */
+	--text-color-white: #64c1ec; /* Colore di sfondo */
+	--text-color-black: #151515; /* Colore del testo */
   }
   
 
