--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@
 
 /* color */
 :root {
-	--primary-color: #f4f4f4;  /* azzurro */
+	--primary-color: #ffffff;  /* azzurro */
 	--secondary-color: #222d4f; /* blu scuro */
 	--text-color-white: #64c1ec; /* Colore di sfondo */
 	--text-color-black: #151515; /* Colore del testo */
@@ -161,7 +161,7 @@ html p a:hover {
 /** @section Context Styles */
 .context-dark,
 .context-dark h1, .context-dark h2, .context-dark h3, .context-dark h4, .context-dark h5, .context-dark h6, .context-dark [class^='heading-'] {
-	color: var(--primary-color);
+	color: var(--text-color-white);
 }
 
 .table-custom.table-cart td, .post-creative {
