--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@
 
 /* color */
 :root {
-	--primary-color: #ffffff;  /* azzurro */
+	--primary-color: #f4f4f4;  /* azzurro */
 	--secondary-color: #222d4f; /* blu scuro */
 	--text-color-white: #64c1ec; /* Colore di sfondo */
 	--text-color-black: #151515; /* Colore del testo */
