--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,9 @@
 
 /* color */
 :root {
-	--primary-color: #f4f4f4;  /* azzurro */
+	--primary-color: #64c1ec;  /* azzurro */
 	--secondary-color: #222d4f; /* blu scuro */
-	--text-color-white: #64c1ec; /* Colore di sfondo */
+	--text-color-white: #ffffff; /* Colore di sfondo */
 	--text-color-black: #151515; /* Colore del testo */
   }
   
@@ -14872,7 +14872,7 @@ div.single-product-rating .icon {
 .services h2 {
     font-size: 2rem;
     margin-bottom: 30px;
-    color: var(--text-color-white); /* Colore del titolo */
+    color: var(--primary-color); /* Colore del titolo */
 }
 
 /* Stile per gli item dei servizi */
