--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,9 @@
 
 /* color */
 :root {
-	--primary-color: #ffffff;  /* azzurro */
+	--primary-color: #64c1ec;  /* azzurro */
 	--secondary-color: #222d4f; /* blu scuro */
-	--text-color-white: #64c1ec; /* Colore di sfondo */
+	--text-color-white: #ffffff; /* Colore di sfondo */
 	--text-color-black: #151515; /* Colore del testo */
   }
   
@@ -10577,7 +10577,7 @@ a.link-social:hover::after {
 .box-about-mega-title {
 	font-size: 72px;
 	line-height: 1;
-	color: rgba(100, 193, 236, 0.1);
+	color: rgba(255, 255, 255, 0.1);
 	font-weight: 900;
 }
 
