--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@
 
 /* color */
 :root {
-	--primary-color: #58f6a9;  /* azzurro  #64c1ec*/
+	--primary-color: #ee9a59;  /* azzurro  #64c1ec*/
 	--secondary-color: #224f30; /* blu scuro #222d4f*/
 	--text-color-white: #ffffff; /* Colore di sfondo */
 	--text-color-black: #151515; /* Colore del testo */
