--- a/css/style.css
+++ b/css/style.css
@@ -60,8 +60,8 @@
 
 /* color */
 :root {
-	--primary-color: #ee9a59;  /* azzurro  #64c1ec*/
-	--secondary-color: #9d3920; /* blu scuro #222d4f*/
+	--primary-color: #61c8ff;  /* azzurro  #64c1ec*/
+	--secondary-color: #3c84ea; /* blu scuro #222d4f*/
 	--text-color-white: #ffffff; /* Colore di sfondo */
 	--text-color-black: #151515; /* Colore del testo */
   }
