--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@
 
 /* color */
 :root {
-	--primary-color: #61c8ff;  /* azzurro  #64c1ec*/
+	--primary-color: #6ab0ed;  /* azzurro  #64c1ec*/
 	--secondary-color: #1a4562; /* blu scuro #222d4f*/
 	--text-color-white: #ffffff; /* Colore di sfondo */
 	--text-color-black: #151515; /* Colore del testo */
