--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ html p a:hover {
 /** @section Context Styles */
 .context-dark,
 .context-dark h1, .context-dark h2, .context-dark h3, .context-dark h4, .context-dark h5, .context-dark h6, .context-dark [class^='heading-'] {
-	color: var(--secondary-color);
+	color: var(--text-color-white);
 }
 
 .table-custom.table-cart td, .post-creative {
@@ -4324,6 +4324,7 @@ h2 + .tabs-albums {
 	font-weight: 700;
 	transition: all 0.3s ease-in-out;
 	padding-top: 8px;
+	color: var(--text-color-black);
 }
 
 @media (min-width: 576px) {
