--- a/css/style.css
+++ b/css/style.css
@@ -10394,12 +10394,12 @@ a.link-social:hover::after {
 }
 
 .box-event {
-	background-color: var(--primary-color);
+	background-color: var(--text-color-white);
 	padding: 19px 18px 22px 22px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	color: var(--secondary-color);
+	color: var(--text-color-black);
 }
 
 .box-event + .box-event {
@@ -10463,7 +10463,7 @@ a.link-social:hover::after {
 
 .box-event-text-title {
 	font-weight: 700;
-	color: var(--text-color-white);
+	color: var(--secondary-color);
 }
 
 .box-event-text-location {
@@ -14932,7 +14932,7 @@ div.single-product-rating .icon {
 /* Archive */
 .archive-section {
 	padding: 40px;
-	background-color: var(--primary-color);
+	background-color: var(--text-color-white);
   }
   
   .archive-nav {
