--- a/css/style.css
+++ b/css/style.css
@@ -14930,6 +14930,13 @@ div.single-product-rating .icon {
   
 
 /* Archive */
+#messaggio-iniziale {
+	text-align: center;
+	font-size: 1.2rem;
+	color: var(--primary-color); /* Usa il colore principale per il testo */
+	margin-top: 20px;
+  }
+  
 .archive-section {
 	padding: 40px;
 	background-color: var(--text-color-white);
