--- a/css/style.css
+++ b/css/style.css
@@ -14937,6 +14937,18 @@ div.single-product-rating .icon {
 	margin-top: 20px;
   }
 
+#messaggio-iniziale h5 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: var(--primary-color); /* Colore per il titolo */
+  margin-bottom: 10px;
+}
+
+#messaggio-iniziale h6 {
+  font-size: 1rem;
+  color: var(--secondary-color); /* Colore per la descrizione */
+}
+
 .archive-section {
 	padding: 40px;
 	background-color: var(--text-color-white);
