--- a/css/style.css
+++ b/css/style.css
@@ -14933,20 +14933,21 @@ div.single-product-rating .icon {
 #messaggio-iniziale {
 	text-align: center;
 	font-size: 2rem;
-	color: var(--secondary-color); /* Usa il colore principale per il testo */
+	background-color: var(--primary-color);
+	color: var(--text-color-white); /* Usa il colore principale per il testo */
 	margin-top: 20px;
   }
 
 #messaggio-iniziale h5 {
   font-size: 1.5rem;
   font-weight: bold;
-  color: var(--primary-color); /* Colore per il titolo */
+  color: var(--text-color-white); /* Colore per il titolo */
   margin-bottom: 10px;
 }
 
 #messaggio-iniziale h6 {
   font-size: 1rem;
-  color: var(--secondary-color); /* Colore per la descrizione */
+  color: var(--text-color-white); /* Colore per la descrizione */
 }
 
 .archive-section {
