change js per audio

--- a/css/style.css
+++ b/css/style.css
@@ -14934,6 +14934,29 @@ div.single-product-rating .icon {
 	margin: 15px 0; /* Spaziatura sopra e sotto */
   }
   
+  .button-services {
+    display: inline-block;
+    background-color: #f1f1f1; /* Colore di sfondo del bottone */
+    color: #333; /* Colore del testo */
+    padding: 15px 30px; /* Spaziatura interna */
+    font-size: 1rem; /* Dimensione del testo */
+    text-decoration: none; /* Rimuove la sottolineatura */
+    border-radius: 50px; /* Rende il bottone arrotondato */
+    border: 2px solid #333; /* Bordo del bottone */
+    transition: all 0.3s ease; /* Aggiungi un effetto di transizione */
+}
+
+.button-services:hover {
+    background-color: #333; /* Colore di sfondo al passaggio del mouse */
+    color: var(--secondary-color); /* Colore del testo al passaggio del mouse */
+    border-color: #333; /* Bordo al passaggio del mouse */
+}
+
+.box-event-button-wrap {
+    display: flex;
+    justify-content: center; /* Centra il bottone */
+    margin-top: 20px;
+}
 
 /* Archive */
 #messaggio-iniziale {
