change js per audio

--- a/css/style.css
+++ b/css/style.css
@@ -14873,7 +14873,7 @@ div.single-product-rating .icon {
 /* Stile generale per la sezione */
 .services {
     padding: 50px 15px;
-    background-color: #f9f9f9; /* Colore di sfondo per separare visivamente la sezione */
+    background-color: #ffffff /* Colore di sfondo per separare visivamente la sezione */
 }
 
 .services h2 {
