--- a/css/style.css
+++ b/css/style.css
@@ -14868,6 +14868,7 @@ div.single-product-rating .icon {
 	}
 }
 
+/* scaricare modulo */
 
 
 /* Stile generale per la sezione */
@@ -14882,7 +14883,13 @@ div.single-product-rating .icon {
     color: var(--primary-color); /* Colore del titolo */
 }
 
-.services h6,h4 {
+.services h3 {
+    font-size: 2rem;
+    margin-bottom: 30px;
+    color: var(--secondary-color); /* Colore del titolo */
+}
+
+.services h6 {
     font-size: 1rem;
     margin-bottom: 30px;
     color: var(--secondary-color); /* Colore del titolo */
