--- a/css/style.css
+++ b/css/style.css
@@ -14914,7 +14914,6 @@ div.single-product-rating .icon {
 }
 
 .service-icon {
-    display: flex;
     width: 70px; /* Dimensione del cerchio */
     height: 70px; /* Dimensione del cerchio */
     border-radius: 50%; /* Crea il cerchio */
@@ -14924,11 +14923,50 @@ div.single-product-rating .icon {
     align-items: center;
     margin-bottom: 15px; /* Distanza tra cerchio e titolo */
 	margin-top: 15px;
+	position: relative;
 }
+
+.service-icon:hover {
+	transform: scale(1.2);
+}
+
+
+/* Assicurati che il contenitore delle note abbia position: relative */
+.notesContainer {
+	position: relative;
+	width: 100%;
+	height: 100%;
+  }
+  
+  /* Stile delle note con animazione */
+  .note {
+	position: absolute;
+	font-size: 30px;
+	opacity: 0;
+	animation: firework 1s forwards;
+  }
+  
+  /* Animazione esplosiva simile a un fuoco d'artificio */
+  @keyframes firework {
+	0% {
+	  opacity: 1;
+	  transform: scale(1) translate(0, 0);
+	}
+	50% {
+	  opacity: 1;
+	  transform: scale(1.5) translate(var(--x), var(--y));
+	}
+	100% {
+	  opacity: 0;
+	  transform: scale(2) translate(var(--x), var(--y));
+	}
+  }
+  
 
 .service-icon i {
     color: white; /* Colore delle icone */
-    font-size: 30px; /* Dimensione dell'icona */
+    font-size: 35px; /* Dimensione dell'icona */
+	margin-left: 15px;
 }
 
 /* Stile per la scritta sotto l'icona */
